--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,15 @@ nltk==3.6.7
 numpy==1.19.5
 pybind11==2.10.4
 pymongo==4.1.1
+python-crfsuite==0.9.9
+pyvi==0.1.1
 regex==2023.6.3
+scikit-learn==0.24.2
+scipy==1.5.4
+six==1.16.0
+sklearn-crfsuite==0.3.6
+tabulate==0.8.10
+threadpoolctl==3.1.0
 tqdm==4.64.1
 typing_extensions==4.1.1
 Werkzeug==2.0.3
